fix: assigned a style for show mwnu button to align items center

--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -66,6 +66,11 @@
   right: 0;
 }
 
+.sideMenu > svg {
+  margin-top: 175px;
+  padding-right: 5px;
+}
+
 .sideMenu:hover {
   background-color: #434343;
   cursor: pointer;
